# carbon_stripped

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: deserialize.rs  error.rs  instruction.rs  lib.rs  transaction.rs  transformers.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/pro-macros/: Cargo.toml
crates/proc-macros/: Cargo.toml
