[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.82"
version = "0.5.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/sevenlabs-hq/carbon"

[workspace.dependencies]
carbon-core = { path = "crates/core", version = "0.5.1" }
carbon-macros = { path = "crates/macros", version = "0.5.1" }
carbon-proc-macros = { path = "crates/proc-macros", version = "0.5.1" }


solana-sdk = "2.1.6"
solana-perf = "2.1.6"
solana-client = "2.1.6"
solana-account-decoder = "2.1.6"
solana-config-program = "2.1.6"
solana-metrics = "2.1.6"
solana-program = "2.1.6"
solana-pubsub-client = "2.1.6"
solana-streamer = "2.1.6"
solana-transaction-status = "2.1.6"
solana-storage-proto = "~2.1.6"
solana-zk-sdk = "=2.1.6"

ed25519-dalek = "1.0.1"


# other
anyhow = "1.0.96"
async-trait = { version = "0.1.86" }
bincode = "1.3.3"
borsh = { version = "1.5.1" }
borsh-derive-internal = "0.10.3"
bs58 = "0.5.1"
base64 = "0.22.1"
hex = "0.4.3"
log = "0.4.25"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"
paste = "1.0.15"
serde = { version = "1.0.208", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.138"
thiserror = "1.0.63"
unicode-xid = "0.2"


#proc macros 
proc-macro2 = "1"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }


[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"