[package]
name = "cargo-core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

solana-sdk.workspace = true
solana-perf.workspace = true
solana-client.workspace = true
solana-account-decoder.workspace = true
solana-config-program.workspace = true
solana-metrics.workspace = true
solana-program.workspace = true
solana-pubsub-client.workspace = true
solana-streamer.workspace = true
solana-transaction-status.workspace = true
solana-storage-proto.workspace = true
solana-zk-sdk.workspace = true


anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
borsh.workspace = true
borsh-derive-internal.workspace = true
bs58.workspace = true
base64.workspace = true
log.workspace = true
metrics.workspace = true
serde = { workspace = true }
thiserror.workspace = true



[lib]
crate-type = ["rlib"]