[package]
name = "carbon-proc-macros"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

borsh-derive-internal = { workspace = true }
hex = { workspace = true }
paste = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
syn = { workspace = true, features = ["full"] }
unicode-xid = { workspace = true }